# dev-camp-tests-rust

./: .gitignore  README.md  run-test.sh
test/: index.js  package-lock.json  package.json
zomes/people/: zome.json
zomes/people/code/: .hcbuild  Cargo.toml
zomes/people/code/src/: lib.rs
