[package]
name = "people"
version = "0.1.0"
authors = ["Connor Turland <connorturland@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha" }
holochain_core_types = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha" }
holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha" }
holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.4-alpha" }
boolinator = "2.4.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
